# Industrial-Monitoring-System

./: IndustrialMotorData.ipynb  README.md  industrial_data.db  industrial_motor_data.csv  industrial_motor_data.db  pyproject.toml
Data/: cleaned_data.csv
Database/: industrial_data.db
Project/api/: connector.py  main.py  schemas.py
Project/responses/: motor_responses.py
Project/routers/: motor_router.py
Project/services/: motor_service.py
