[project]
name = "industrial-monitoring-system"
version = "0.1.0"
description = "Industrial monitoring system project for GitHub"
authors = [
    {name = "alvarogenmv16",email = "alvarogenmv16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
